<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/bottom_navigation_home"
        android:icon="@drawable/ic_search"
        android:id="@+id/home"
        app:cnb_iconColor="@color/orange_700" />

    <item android:title="@string/bottom_navigation_stream"
        android:icon="@drawable/ic_game_controller"
        android:id="@+id/stream"
        app:cnb_iconColor="@color/orange_700" />

    <item android:title="@string/bottom_navigation_events"
        android:icon="@drawable/ic_ticket"
        android:id="@+id/events"
        app:cnb_iconColor="@color/orange_700" />

    <item android:title="@string/bottom_navigation_profile"
        android:icon="@drawable/ic_profile"
        android:id="@+id/profile"
        app:cnb_iconColor="@color/orange_700" />

</menu>