<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="20dp"
    android:elevation="8dp">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:foreground="@drawable/character_gradient_shape"
            android:contentDescription="@string/description_hero_character_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:maxWidth="130dp"
                android:text="@string/name_character_layout"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/product_sans_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/favorite" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_character_layout"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/product_sans_light"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                />

            <ImageButton
                android:id="@+id/favorite"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:padding="12dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_heart"
                android:background="@drawable/button_rounded_shape"
                app:tint="@color/white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description_favorite_character_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>