<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_700">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".characterdetails.CharacterDetailsActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:foreground="@drawable/character_details_gradient_shape"
            android:background="@color/white"
            android:contentDescription="@string/description_hero_character_layout"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <ImageView
                android:id="@+id/back_header"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_chevron_back"
                android:contentDescription="@string/back_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/text_header_character_details"
                android:fontFamily="@font/product_sans_regular"
                android:textColor="@color/gray_700"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/back_header"
                app:layout_constraintTop_toTopOf="@+id/back_header"
                app:layout_constraintBottom_toBottomOf="@+id/back_header" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-11dp"
            android:backgroundTint="@color/orange_700"
            app:cardElevation="0dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:maxWidth="250dp"
                    android:text="@string/name_character_details"
                    android:textColor="@color/gray_50"
                    android:fontFamily="@font/product_sans_medium"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingHorizontal="30dp"
                    android:text="@string/description_character_details"
                    android:textColor="@color/gray_50"
                    android:fontFamily="@font/product_sans_regular"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/name"
                    app:layout_constraintTop_toBottomOf="@id/name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/favorite"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="-35dp"
            android:padding="14dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_heart"
            android:elevation="4dp"
            android:background="@drawable/button_rounded_character_details_shape"
            android:contentDescription="@string/description_favorite_character_layout"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/card" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
