<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".home.HomeFragment">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            android:theme="@style/SearchViewStyle">

            <SearchView
                android:id="@+id/search_characters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryBackground="@android:color/transparent" />

        </androidx.cardview.widget.CardView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:columnCount="8">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="5"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/gray_700"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_light"
                    android:text="@string/app_name_alt"
                    android:textColor="@color/gray_700"
                    android:textSize="28sp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_columnWeight="3"
                android:paddingEnd="30dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:layout_columnWeight="3"
                    android:layout_gravity="end"
                    android:src="@drawable/img_home_header"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/description_header_image_home" />

            </FrameLayout>

        </GridLayout>
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="20dp"
            android:clipToPadding="false" />

        <ProgressBar
            android:id="@+id/progress_bar_characters"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/favorite"
            android:textColor="@color/gray_700"
            android:textSize="32sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_characters_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:clipToPadding="false" />

        <TextView
            android:id="@+id/favorite_empty"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/favorite_empty"
            android:textSize="18sp"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>
