<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_shape"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/description_hero_character_layout" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/image_card_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="220dp"
                android:text="@string/name_character_layout"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_bold"
                app:layout_constraintStart_toEndOf="@id/image_card_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/code" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/code_character_layout"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_light"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/back_header"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_chevron_back"
            android:rotation="180"
            android:contentDescription="@string/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginHorizontal="10dp"-->
<!--            android:background="@color/gray_100"-->
<!--            app:layout_constraintTop_toBottomOf="@id/image"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
