<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".charactersearch.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <ImageView
                android:id="@+id/back_header"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_chevron_back"
                android:contentDescription="@string/back_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/search_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/search_term"
                android:fontFamily="@font/product_sans_regular"
                android:textColor="@color/gray_700"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/back_header"
                app:layout_constraintTop_toTopOf="@+id/back_header"
                app:layout_constraintBottom_toBottomOf="@+id/back_header" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_characters_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:clipToPadding="false" />

        <ProgressBar
            android:id="@+id/progress_bar_search_characters"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/search_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/search_empty"
            android:textSize="18sp"
            android:visibility="invisible"
            />

    </LinearLayout>
</ScrollView>